# nanoGCG

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple.py
nanogcg/: __init__.py  gcg.py  utils.py
