[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanogcg"
version = "0.2.1"
authors = [
    { name="Justin Wang", email="justin@grayswan.ai" },
]
description = "A lightweight implementation of the GCG algorithm"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "transformers>=4.4",
]

[tool.setuptools]
packages = ["nanogcg"]

[project.urls]
Homepage = "https://github.com/GraySwanAI/nanoGCG"
Issues = "https://github.com/GraySwanAI/nanoGCG/issues"